# ti-nspire-calc

./: .gitignore  CMakeLists.txt  README.md
include/: ast.h  bigint.h  colors.h  repl.h  runtimeenv.h  token.h  value.h
src/: ast.cpp  bigint.cpp  main.cpp  repl.cpp  runtimeenv.cpp  utils.cpp  value.cpp
src/include/: object.h  repl.h
